5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1582_1559.log
== SUBMITION (2019-03-14 17:26:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME:
0.143311
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(.upper(Ada Lovelace foi a primeira programadora da historia.))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:26:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(Ada Lovelace foi a primeira programadora da historia.))
-- ERROR:
File "XXXX", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da historia.))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:26:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME:
0.143358
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da historia.))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:26:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.???upper(Ada Lovelace foi a primeira programadora da historia.))
-- ERROR:
File "XXXX", line 2
    print(frase.???upper(Ada Lovelace foi a primeira programadora da historia.))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:26:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.???upper(Ada Lovelace foi a primeira programadora da historia.))
-- ERROR:
File "XXXX", line 2
    print(frase.???upper(Ada Lovelace foi a primeira programadora da historia.))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:27:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:28:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:28:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.22152
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
